# openhouse

./: .gitignore  .teller.env  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  README.md  SPEC.md  pyproject.toml
.claude/: settings.json  ship.toml  ultraship.toml
.claude/agents/: git-workflow-manager.md  simplify-refactor.md
.claude/hooks/: guard-main-write.sh
docs/: parse-validation-subagent-prompt.md  parse-validation-sweep.md
docs/decisions/: GH-0001-pull-progress-tqdm-0002.md  GH-0001-pull-required-contact-0001.md  GH-0002-scaffold-0001.md  GH-0003-index-pull-0001.md  GH-0004-pdf-pull-0001.md  GH-0006-metadata-filer-id-0001.md  GH-0007-pdf-classifier-0001.md  GH-0009-ptr-extraction-0001.md  GH-0010-read-command-0001.md  GH-0012-fd-schedule-extraction-0001.md  GH-0013-acceptance-pass-0001.md  GH-0014-agent-skill-ready-0001.md  GH-0016-bioguide-identity-0001.md  GH-0017-structured-ej-0001.md  GH-0018-port-ultraship-0001.md  GH-0020-move-ultraship-tool-0001.md  GH-0030-versioning-policy-0001.md  GH-0037-release-mechanism-0001.md  GH-0040-read-residual-refinements-0001.md  GH-0043-release-drift-guard-0001.md  GH-0046-ptr-amount-wrap-0001.md  GH-0049-ptr-exact-dollar-0001.md  GH-0050-data-dir-env-0001.md  GH-0052-fd-nul-heading-0001.md  GH-0056-inspect-0001.md  GH-0063-vendor-pressed-skills-0001.md  GH-0066-inspect-frontend-0001.md  GH-0070-row-anchor-rework-0001.md  GH-0100-schedule-a-wrapped-tag-anchor-0001.md  GH-0113-date-sanity-range-0001.md  GH-0114-asset-type-normalized-0001.md  GH-0122-parse-identity-noise-0001.md  GH-0130-trailing-schedule-appendix-0001.md  GH-0131-schedule-c-typebleed-0001.md  GH-0133-hj-header-row-0001.md  GH-0134-schedule-d-datecomma-0001.md  GH-0166-schedule-c-amount-columns-0001.md  (+14 more)
openhouse/: __init__.py  cli.py  fec_parse.py  fec_pull.py  fec_read.py  index.py  legislators.py  parse.py  pdf.py  pull.py  read.py  ready.py  reference.py  schemas.fingerprint  schemas.py
reports/: parse-validation-sweep-results.md
scripts/: sweep_invariants.py  ultraship.py
tests/: test_acceptance.py  test_cli.py  test_fd_extraction.py  test_fd_regression_gh143.py  test_fd_regression_gh166.py  test_fec_acceptance.py  test_fec_parse.py  test_fec_pull.py  test_fec_read.py  test_index.py  test_inspect.py  test_inspect_server.py  test_legislators.py  test_metadata.py  test_parse.py  test_pdf.py  test_ptr_extraction.py  test_pull.py  test_read.py  test_ready.py  test_reference.py  test_release.py  test_schemas.py  test_sweep_invariants.py  test_ultraship.py
(+60 files in other folders)
