[project]
name = "openhouse"
# Kept 1:1 with openhouse.schemas.SCHEMA_VERSION — see docs/decisions/GH-0030.
# tests/test_schemas.py::test_pyproject_version_matches_schema_version enforces it.
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "tqdm>=4.66",
    "pdfplumber>=0.11",
]

[project.scripts]
openhouse = "openhouse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
