[project]
name = "openhouse"
# Version is derived from the latest git tag by hatch-vcs (GH-0037), so the
# release tool's only write is `git tag` — nothing to keep in sync here. Off a
# tag, builds report a dev version (e.g. 0.3.0.devN+g<sha>).
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "tqdm>=4.66",
    "pdfplumber>=0.11",
]

[project.scripts]
openhouse = "openhouse.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
