[project]
name = "openhouse"
# Version is derived from the latest git tag by hatch-vcs (GH-0037), so the
# release tool's only write is `git tag` — nothing to keep in sync here. Off a
# tag, builds report a dev version (e.g. 0.3.0.devN+g<sha>).
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "tqdm>=4.66",
    "pdfplumber>=0.11",
]

[project.scripts]
openhouse = "openhouse.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

# Ship the agent-skill prose as package data so `openhouse ready` resolves it via
# importlib.resources (the repo stays the only source of truth; SPEC §8). The
# .md files live inside the openhouse package; force-include guarantees the wheel
# carries them regardless of default file-selection rules.
[tool.hatch.build.targets.wheel.force-include]
"openhouse/skill/SKILL.md" = "openhouse/skill/SKILL.md"
"openhouse/skill/reference.md" = "openhouse/skill/reference.md"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
